--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="PROPLANicon.png"/><img src="PROPLAN.png" class="proplanima" width="200" height="200"><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><title>React App</title><style></style><script defer="defer" src="/static/js/main.97c34feb.js"></script><link href="/static/css/main.b67ba404.css" rel="stylesheet"></head><body id="grad"><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><img src="./settings.png" alt="settings" width="25" height="25" class="setting"></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Proplan</title>
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/react-app/index.js" nonce="MTE3Njg3Nzk2NywxOTQyMDQwNTIy"></script>
+  <script nonce="MTE3Njg3Nzk2NywxOTQyMDQwNTIy">(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.nonce='MTE3Njg3Nzk2NywxOTQyMDQwNTIy';d.innerHTML="window.__CF$cv$params={r:'922aceec1db475f2',t:'MTc0MjM2NDY0My4wMDAwMDA='};var a=document.createElement('script');a.nonce='MTE3Njg3Nzk2NywxOTQyMDQwNTIy';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</html>
