--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/react-app/index.tsx" nonce="MTE3Njg3Nzk2NywxOTQyMDQwNTIy"></script>
+    <script type="module" src="/src/index.jsx" nonce="MTE3Njg3Nzk2NywxOTQyMDQwNTIy"></script>
   <script nonce="MTE3Njg3Nzk2NywxOTQyMDQwNTIy">(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.nonce='MTE3Njg3Nzk2NywxOTQyMDQwNTIy';d.innerHTML="window.__CF$cv$params={r:'922aceec1db475f2',t:'MTc0MjM2NDY0My4wMDAwMDA='};var a=document.createElement('script');a.nonce='MTE3Njg3Nzk2NywxOTQyMDQwNTIy';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
